# tf-mcp-server

./: .mcprc.json  CHANGELOG.md  README.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docker/: Dockerfile  docker-compose.yml
python/: pyproject.toml
python/thunderfire_mcp/: __init__.py  client.py  resources.py  server.py  tools.py
src/: client.ts  config.ts  index.ts  server.ts
src/prompts/: index.ts
src/resources/: index.ts
src/tools/: chitral.ts  gym.ts  index.ts  marketplace.ts  messaging.ts  nodes.ts  script.ts  services.ts  theta.ts
