[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thunderfire-mcp"
version = "1.0.0"
description = "THUNDERFIRE autonomous node management via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MAYAYAI" }
]
keywords = ["mcp", "thunderfire", "autonomous", "iot", "robotics", "nodes"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0"
]

[project.scripts]
thunderfire-mcp = "thunderfire_mcp:main"

[project.urls]
Homepage = "https://mayayai.com/thunderfire"
Documentation = "https://mayayai.com/thunderfire/mcp"
Repository = "https://github.com/mayayai/tf-mcp-server"
Issues = "https://github.com/mayayai/tf-mcp-server/issues"

[tool.hatch.build.targets.wheel]
packages = ["thunderfire_mcp"]
